--- a/src/components/storm/storm.module.scss
+++ b/src/components/storm/storm.module.scss
@@ -30,6 +30,7 @@
   .stormInfo {
     padding: 2rem;
     height: fit-content;
+    width: 90%;
     .stormtitle {
       display: block;
       color: #fff;
